--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/style.css" />
     <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
     <title>Starwars: episode IX</title>
   </head>
@@ -39,7 +38,12 @@
       </div>
       <!-- /.content -->
 
-      <button class="button-play">Смотреть трейлер</button>
+      <button
+        data-fancybox
+        href="https://youtu.be/HfnINdtw_8E"
+        class="button-play">
+        Смотреть трейлер
+      </button>
       <!-- /.play-button -->
 
       <div class="footer">
@@ -57,9 +61,13 @@
       <!-- /.footer -->
     </div>
     <!-- /.container -->
+    <link rel="stylesheet" href="css/owlCarusel/owl.carousel.min.css" />
+    <link rel="stylesheet" href="css/fancyBox/jquery.fancybox.min.css" />
+    <link rel="stylesheet" href="css/main.css" />
+
     <script src="/scripts/jquery/jquery.min.js"></script>
-    <link rel="stylesheet" href="css/owl.carousel.min.css">
     <script src="/scripts/owlCarusel/owl.carousel.min.js"></script>
+    <script src="/scripts/fancyBox/jquery.fancybox.min.js"></script>
     <script src="/scripts/main.js"></script>
   </body>
 </html>
