--- a/index.html
+++ b/index.html
@@ -41,20 +41,20 @@
       <button
         data-fancybox
         href="https://youtu.be/HfnINdtw_8E"
-        class="button-play">
-        Смотреть трейлер
+        class="button-play"
+      >Смотреть трейлер
       </button>
       <!-- /.play-button -->
 
       <div class="footer">
         <div class="episodes">
-          <div class="e-title">Предыдущие эпизоды</div>
-          <div class="slider owl-theme owl-carousel">
+          <div class="episodes-title">Предыдущие эпизоды</div>
+          <div class="episodes-slider owl-theme owl-carousel">
             <!-- dynamic items -->
           </div>
-          <div class="slider-nav">
-            <div class="slider-nav-left"></div>
-            <div class="slider-nav-right"></div>
+          <div class="episodes-slider-nav">
+            <div class="episodes-slider-nav-left"></div>
+            <div class="episodes-slider-nav-right"></div>
           </div>
         </div>
       </div>
@@ -64,6 +64,7 @@
     <link rel="stylesheet" href="css/owlCarusel/owl.carousel.min.css" />
     <link rel="stylesheet" href="css/fancyBox/jquery.fancybox.min.css" />
     <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="css/media.css" />
 
     <script src="/scripts/jquery/jquery.min.js"></script>
     <script src="/scripts/owlCarusel/owl.carousel.min.js"></script>
